edit favorite controller to use prodUuid